--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@geist-ui/core": "^2.3.8",
     "@notionhq/client": "^2.2.13",
     "next": "14.0.1",
     "react": "^18",
