--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@geist-ui/core": "^2.3.8",
     "@notionhq/client": "^2.2.13",
+    "lodash": "^4.17.21",
     "next": "14.0.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-gauge-component": "^1.1.30"
   },
   "devDependencies": {
     "@types/node": "^20",
