--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@geist-ui/core": "^2.3.8",
+    "@geist-ui/icons": "^1.0.2",
     "@notionhq/client": "^2.2.13",
     "lodash": "^4.17.21",
     "next": "14.0.1",
