--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@notionhq/client": "^2.2.13",
     "lodash": "^4.17.21",
     "next": "14.0.1",
+    "next-auth": "^4.24.5",
     "react": "^18",
     "react-dom": "^18",
     "react-gauge-component": "^1.1.30"
