--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "next-auth": "^4.24.5",
     "react": "^18",
     "react-dom": "^18",
-    "react-gauge-component": "^1.1.30"
+    "react-gauge-component": "^1.1.30",
+    "styled-components": "^6.1.1"
   },
   "devDependencies": {
     "@types/node": "^20",
